[package]
name = "gameofl"
version = "0.1.0"
authors = ["jrybicki-jsc <j.rybicki@fz-juelich.de>"]
edition = "2018"
wasm-opt = false

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
web-sys = { version = "0.3.45", features = ['console']}

console_error_panic_hook = { version = "0.1.6", optional = true }


[dev-dependencies]
wasm-bindgen-test = "0.3.13"

